Crash Blender after baking and render animation #129691

Closed
opened 2024-11-01 16:43:41 +01:00 by PistapolVR · 4 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01

Blender Version
Broken: version: 4.4.0 Alpha, branch: main, commit date: 2024-10-28 15:30, hash: 9b7e660fad5e
Broken: 4.3
Worked: 4.2 as it did not support all the features to recreate the issue

Short description of error
When I bake this simulation everything is fine
when I press Render Blender crashes

Exact steps for others to reproduce the error
Press the bake button
and try rendering
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01 **Blender Version** Broken: version: 4.4.0 Alpha, branch: main, commit date: 2024-10-28 15:30, hash: `9b7e660fad5e` Broken: 4.3 Worked: 4.2 as it did not support all the features to recreate the issue **Short description of error** When I bake this simulation everything is fine when I press Render Blender crashes **Exact steps for others to reproduce the error** Press the bake button and try rendering [Based on the default startup or an attached .blend file (as simple as possible)]
PistapolVR added the
Status
Needs Triage
Severity
Normal
Type
Bug
labels 2024-11-01 16:43:42 +01:00
Member

I can confirm the crash here if I bake the animation then select Render Animation. The crash occurs after a roughly 12 or so frames of rendering.

I can confirm the issue in 4.3 and 4.4. Can not test 4.2 as it does not support the For Each Element nodes used in this file.

I will confirm this report, set to high severity as it is a crash, and set as a geometry nodes issue.

I can't simplify the file today. But may be able to do it tomorrow. Or later this week?

I can confirm the crash here if I bake the animation then select `Render Animation`. The crash occurs after a roughly 12 or so frames of rendering. I can confirm the issue in 4.3 and 4.4. Can not test 4.2 as it does not support the `For Each Element` nodes used in this file. I will confirm this report, set to high severity as it is a crash, and set as a geometry nodes issue. I can't simplify the file today. But may be able to do it tomorrow. Or later this week?
Member

Looked into this for a while and didn't find what the problem is. Double checked that the size of the buffer passed to BKE_packedfile_new_from_memory is correct and it's all readable.

Looked into this for a while and didn't find what the problem is. Double checked that the size of the buffer passed to `BKE_packedfile_new_from_memory` is correct and it's all readable.
Member

I didn't finish checking this yet and have to leave soon, but I'm 90% sure that it is an issue in mix_geometries when interpolating between two sets of instances which don't have a one-to-one mapping.

I didn't finish checking this yet and have to leave soon, but I'm 90% sure that it is an issue in `mix_geometries` when interpolating between two sets of instances which don't have a one-to-one mapping.
Member
ASAN Report

=================================================================
==809247==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x5290004afeb3 at pc 0x7fec0bcf5676 bp 0x7ffeb751af50 sp 0x7ffeb751a710
READ of size 19636 at 0x5290004afeb3 thread T0
    #0 0x7fec0bcf5675 in memcpy (/lib64/libasan.so.8+0xf5675) (BuildId: a4ad7eb954b390cf00f07fa10952988a41d9fc7a)
    #1 0x39b96bc in mywrite /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:586
    #2 0x39bb2bf in writedata /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:791
    #3 0x39c48a5 in BLO_write_raw(BlendWriter*, unsigned long, void const*) /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1825
    #4 0x1278230 in operator() /home/hans/blender-git/blender/source/blender/blenkernel/intern/packedFile.cc:962
    #5 0x1279255 in callback_fn<BKE_packedfile_blend_write(BlendWriter*, const PackedFile*)::<lambda()> > /home/hans/blender-git/blender/source/blender/blenlib/BLI_function_ref.hh:96
    #6 0x911fb2 in blender::FunctionRef<void ()>::operator()() const /home/hans/blender-git/blender/source/blender/blenlib/BLI_function_ref.hh:132
    #7 0x39c586a in BLO_write_shared(BlendWriter*, void const*, unsigned long, blender::ImplicitSharingInfo const*, blender::FunctionRef<void ()>) /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1988
    #8 0x12784f7 in BKE_packedfile_blend_write(BlendWriter*, PackedFile const*) /home/hans/blender-git/blender/source/blender/blenkernel/intern/packedFile.cc:961
    #9 0x4ec67e5 in operator() /home/hans/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:2567
    #10 0x4ec7e1b in blend_write /home/hans/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:2573
    #11 0xf1f90e in BKE_modifier_blend_write(BlendWriter*, ID const*, ListBase*) /home/hans/blender-git/blender/source/blender/blenkernel/intern/modifier.cc:1028
    #12 0x11fb40a in object_blend_write /home/hans/blender-git/blender/source/blender/blenkernel/intern/object.cc:668
    #13 0x39c2357 in write_file_handle /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1466
    #14 0x39c3d85 in BLO_write_file_impl /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1722
    #15 0x39c4387 in BLO_write_file(Main*, char const*, int, BlendFileWriteParams const*, ReportList*) /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1777
    #16 0x3436494 in WM_autosave_write(wmWindowManager*, Main*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2322
    #17 0x3436128 in wm_autosave_write_try /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2295
    #18 0x3436c6a in wm_autosave_timer(Main*, wmWindowManager*, wmTimer*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2377
    #19 0x351d7e3 in wm_window_timers_process /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_window.cc:1786
    #20 0x351e08e in wm_window_events_process(bContext const*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_window.cc:1841
    #21 0x33acc71 in WM_main(bContext*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm.cc:637
    #22 0x615dfe in main /home/hans/blender-git/blender/source/creator/creator.cc:588
    #23 0x7fec0a839087 in __libc_start_call_main (/lib64/libc.so.6+0x2a087) (BuildId: 77c77fee058b19c6f001cf2cb0371ce3b8341211)
    #24 0x7fec0a83914a in __libc_start_main_alias_1 (/lib64/libc.so.6+0x2a14a) (BuildId: 77c77fee058b19c6f001cf2cb0371ce3b8341211)
    #25 0x614e04 in _start (/home/hans/blender-git/debug_lite/bin/blender+0x614e04) (BuildId: affb78cd7de1c6931ae9f274b45af57655a341c8)

0x5290004afeb3 is located 0 bytes after 19635-byte region [0x5290004ab200,0x5290004afeb3)
allocated by thread T72 here:
    #0 0x7fec0bcf84b8 in operator new(unsigned long) (/lib64/libasan.so.8+0xf84b8) (BuildId: a4ad7eb954b390cf00f07fa10952988a41d9fc7a)
    #1 0x7fec0ab5a73d in std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_mutate(unsigned long, unsigned long, char const*, unsigned long) (/lib64/libstdc++.so.6+0x15a73d) (BuildId: efdde18722aa72a0a779270371aeee5a9f6ddf87)

Thread T72 created by T0 here:
    #0 0x7fec0bcef871 in pthread_create (/lib64/libasan.so.8+0xef871) (BuildId: a4ad7eb954b390cf00f07fa10952988a41d9fc7a)
    #1 0x30e8347 in BLI_threadpool_insert /home/hans/blender-git/blender/source/blender/blenlib/intern/threads.cc:190
    #2 0x346c245 in WM_jobs_start(wmWindowManager*, wmJob*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.cc:489
    #3 0x875dddf in start_bake_job /home/hans/blender-git/blender/source/blender/editors/object/object_bake_simulation.cc:589
    #4 0x87647cd in bake_single_node_invoke /home/hans/blender-git/blender/source/blender/editors/object/object_bake_simulation.cc:999
    #5 0x33de7d9 in wm_operator_invoke /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:1615
    #6 0x33e0690 in wm_operator_call_internal /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:1850
    #7 0x33e0795 in WM_operator_name_call_ptr(bContext*, wmOperatorType*, wmOperatorCallContext, PointerRNA*, wmEvent const*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:1864
    #8 0x33e1b84 in WM_operator_name_call_ptr_with_depends_on_cursor(bContext*, wmOperatorType*, wmOperatorCallContext, PointerRNA*, wmEvent const*, char const*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:2054
    #9 0x6b68c42 in ui_apply_but_funcs_after /home/hans/blender-git/blender/source/blender/editors/interface/interface_handlers.cc:1060
    #10 0x6bfeb8a in ui_handler_region_menu /home/hans/blender-git/blender/source/blender/editors/interface/interface_handlers.cc:12011
    #11 0x33d6e77 in wm_handler_ui_call /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:894
    #12 0x33f8680 in wm_handlers_do_intern /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3422
    #13 0x33f9b7a in wm_handlers_do /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3541
    #14 0x3403387 in wm_event_do_handlers(bContext*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:4168
    #15 0x33acc7d in WM_main(bContext*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm.cc:640
    #16 0x615dfe in main /home/hans/blender-git/blender/source/creator/creator.cc:588
    #17 0x7fec0a839087 in __libc_start_call_main (/lib64/libc.so.6+0x2a087) (BuildId: 77c77fee058b19c6f001cf2cb0371ce3b8341211)
    #18 0x7fec0a83914a in __libc_start_main_alias_1 (/lib64/libc.so.6+0x2a14a) (BuildId: 77c77fee058b19c6f001cf2cb0371ce3b8341211)
    #19 0x614e04 in _start (/home/hans/blender-git/debug_lite/bin/blender+0x614e04) (BuildId: affb78cd7de1c6931ae9f274b45af57655a341c8)

SUMMARY: AddressSanitizer: heap-buffer-overflow (/lib64/libasan.so.8+0xf5675) (BuildId: a4ad7eb954b390cf00f07fa10952988a41d9fc7a) in memcpy
Shadow bytes around the buggy address:
  0x5290004afc00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x5290004afc80: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x5290004afd00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x5290004afd80: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x5290004afe00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
=>0x5290004afe80: 00 00 00 00 00 00[03]fa fa fa fa fa fa fa fa fa
  0x5290004aff00: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x5290004aff80: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x5290004b0000: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x5290004b0080: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x5290004b0100: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
Shadow byte legend (one shadow byte represents 8 application bytes):
  Addressable:           00
  Partially addressable: 01 02 03 04 05 06 07 
  Heap left redzone:       fa
  Freed heap region:       fd
  Stack left redzone:      f1
  Stack mid redzone:       f2
  Stack right redzone:     f3
  Stack after return:      f5
  Stack use after scope:   f8
  Global redzone:          f9
  Global init order:       f6
  Poisoned by user:        f7
  Container overflow:      fc
  Array cookie:            ac
  Intra object redzone:    bb
  ASan internal:           fe
  Left alloca redzone:     ca
  Right alloca redzone:    cb
==809247==ABORTING
<details> <summary>ASAN Report</summary> ``` ================================================================= ==809247==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x5290004afeb3 at pc 0x7fec0bcf5676 bp 0x7ffeb751af50 sp 0x7ffeb751a710 READ of size 19636 at 0x5290004afeb3 thread T0 #0 0x7fec0bcf5675 in memcpy (/lib64/libasan.so.8+0xf5675) (BuildId: a4ad7eb954b390cf00f07fa10952988a41d9fc7a) #1 0x39b96bc in mywrite /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:586 #2 0x39bb2bf in writedata /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:791 #3 0x39c48a5 in BLO_write_raw(BlendWriter*, unsigned long, void const*) /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1825 #4 0x1278230 in operator() /home/hans/blender-git/blender/source/blender/blenkernel/intern/packedFile.cc:962 #5 0x1279255 in callback_fn<BKE_packedfile_blend_write(BlendWriter*, const PackedFile*)::<lambda()> > /home/hans/blender-git/blender/source/blender/blenlib/BLI_function_ref.hh:96 #6 0x911fb2 in blender::FunctionRef<void ()>::operator()() const /home/hans/blender-git/blender/source/blender/blenlib/BLI_function_ref.hh:132 #7 0x39c586a in BLO_write_shared(BlendWriter*, void const*, unsigned long, blender::ImplicitSharingInfo const*, blender::FunctionRef<void ()>) /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1988 #8 0x12784f7 in BKE_packedfile_blend_write(BlendWriter*, PackedFile const*) /home/hans/blender-git/blender/source/blender/blenkernel/intern/packedFile.cc:961 #9 0x4ec67e5 in operator() /home/hans/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:2567 #10 0x4ec7e1b in blend_write /home/hans/blender-git/blender/source/blender/modifiers/intern/MOD_nodes.cc:2573 #11 0xf1f90e in BKE_modifier_blend_write(BlendWriter*, ID const*, ListBase*) /home/hans/blender-git/blender/source/blender/blenkernel/intern/modifier.cc:1028 #12 0x11fb40a in object_blend_write /home/hans/blender-git/blender/source/blender/blenkernel/intern/object.cc:668 #13 0x39c2357 in write_file_handle /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1466 #14 0x39c3d85 in BLO_write_file_impl /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1722 #15 0x39c4387 in BLO_write_file(Main*, char const*, int, BlendFileWriteParams const*, ReportList*) /home/hans/blender-git/blender/source/blender/blenloader/intern/writefile.cc:1777 #16 0x3436494 in WM_autosave_write(wmWindowManager*, Main*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2322 #17 0x3436128 in wm_autosave_write_try /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2295 #18 0x3436c6a in wm_autosave_timer(Main*, wmWindowManager*, wmTimer*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_files.cc:2377 #19 0x351d7e3 in wm_window_timers_process /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_window.cc:1786 #20 0x351e08e in wm_window_events_process(bContext const*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_window.cc:1841 #21 0x33acc71 in WM_main(bContext*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm.cc:637 #22 0x615dfe in main /home/hans/blender-git/blender/source/creator/creator.cc:588 #23 0x7fec0a839087 in __libc_start_call_main (/lib64/libc.so.6+0x2a087) (BuildId: 77c77fee058b19c6f001cf2cb0371ce3b8341211) #24 0x7fec0a83914a in __libc_start_main_alias_1 (/lib64/libc.so.6+0x2a14a) (BuildId: 77c77fee058b19c6f001cf2cb0371ce3b8341211) #25 0x614e04 in _start (/home/hans/blender-git/debug_lite/bin/blender+0x614e04) (BuildId: affb78cd7de1c6931ae9f274b45af57655a341c8) 0x5290004afeb3 is located 0 bytes after 19635-byte region [0x5290004ab200,0x5290004afeb3) allocated by thread T72 here: #0 0x7fec0bcf84b8 in operator new(unsigned long) (/lib64/libasan.so.8+0xf84b8) (BuildId: a4ad7eb954b390cf00f07fa10952988a41d9fc7a) #1 0x7fec0ab5a73d in std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_mutate(unsigned long, unsigned long, char const*, unsigned long) (/lib64/libstdc++.so.6+0x15a73d) (BuildId: efdde18722aa72a0a779270371aeee5a9f6ddf87) Thread T72 created by T0 here: #0 0x7fec0bcef871 in pthread_create (/lib64/libasan.so.8+0xef871) (BuildId: a4ad7eb954b390cf00f07fa10952988a41d9fc7a) #1 0x30e8347 in BLI_threadpool_insert /home/hans/blender-git/blender/source/blender/blenlib/intern/threads.cc:190 #2 0x346c245 in WM_jobs_start(wmWindowManager*, wmJob*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.cc:489 #3 0x875dddf in start_bake_job /home/hans/blender-git/blender/source/blender/editors/object/object_bake_simulation.cc:589 #4 0x87647cd in bake_single_node_invoke /home/hans/blender-git/blender/source/blender/editors/object/object_bake_simulation.cc:999 #5 0x33de7d9 in wm_operator_invoke /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:1615 #6 0x33e0690 in wm_operator_call_internal /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:1850 #7 0x33e0795 in WM_operator_name_call_ptr(bContext*, wmOperatorType*, wmOperatorCallContext, PointerRNA*, wmEvent const*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:1864 #8 0x33e1b84 in WM_operator_name_call_ptr_with_depends_on_cursor(bContext*, wmOperatorType*, wmOperatorCallContext, PointerRNA*, wmEvent const*, char const*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:2054 #9 0x6b68c42 in ui_apply_but_funcs_after /home/hans/blender-git/blender/source/blender/editors/interface/interface_handlers.cc:1060 #10 0x6bfeb8a in ui_handler_region_menu /home/hans/blender-git/blender/source/blender/editors/interface/interface_handlers.cc:12011 #11 0x33d6e77 in wm_handler_ui_call /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:894 #12 0x33f8680 in wm_handlers_do_intern /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3422 #13 0x33f9b7a in wm_handlers_do /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3541 #14 0x3403387 in wm_event_do_handlers(bContext*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.cc:4168 #15 0x33acc7d in WM_main(bContext*) /home/hans/blender-git/blender/source/blender/windowmanager/intern/wm.cc:640 #16 0x615dfe in main /home/hans/blender-git/blender/source/creator/creator.cc:588 #17 0x7fec0a839087 in __libc_start_call_main (/lib64/libc.so.6+0x2a087) (BuildId: 77c77fee058b19c6f001cf2cb0371ce3b8341211) #18 0x7fec0a83914a in __libc_start_main_alias_1 (/lib64/libc.so.6+0x2a14a) (BuildId: 77c77fee058b19c6f001cf2cb0371ce3b8341211) #19 0x614e04 in _start (/home/hans/blender-git/debug_lite/bin/blender+0x614e04) (BuildId: affb78cd7de1c6931ae9f274b45af57655a341c8) SUMMARY: AddressSanitizer: heap-buffer-overflow (/lib64/libasan.so.8+0xf5675) (BuildId: a4ad7eb954b390cf00f07fa10952988a41d9fc7a) in memcpy Shadow bytes around the buggy address: 0x5290004afc00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x5290004afc80: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x5290004afd00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x5290004afd80: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x5290004afe00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 =>0x5290004afe80: 00 00 00 00 00 00[03]fa fa fa fa fa fa fa fa fa 0x5290004aff00: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x5290004aff80: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x5290004b0000: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x5290004b0080: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x5290004b0100: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa Shadow byte legend (one shadow byte represents 8 application bytes): Addressable: 00 Partially addressable: 01 02 03 04 05 06 07 Heap left redzone: fa Freed heap region: fd Stack left redzone: f1 Stack mid redzone: f2 Stack right redzone: f3 Stack after return: f5 Stack use after scope: f8 Global redzone: f9 Global init order: f6 Poisoned by user: f7 Container overflow: fc Array cookie: ac Intra object redzone: bb ASan internal: fe Left alloca redzone: ca Right alloca redzone: cb ==809247==ABORTING ``` </details>
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-11-05 15:52:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#129691
No description provided.